--- a/src/com/cashiers/gui/css/MainScene.css
+++ b/src/com/cashiers/gui/css/MainScene.css
@@ -56,17 +56,19 @@ root
 {
     -fx-background-color: #ffffff;
 }
-
 .table-row-cell:empty .table-cell
 {
     -fx-border-width: 0px;
 }
-
 .button
 {
     -fx-base: #000000;
     -fx-font-weight: bold;
     -fx-border-color: #000000;
     -fx-background-insets: 0;
+}
+.scroll-bar
+{
+    -fx-base: #f5f5f5;
 }
 
